<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:orientation="horizontal"
        android:background="@color/title_bar"
        android:padding="10dp">
        <ImageView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ico_warn"
            android:layout_marginRight="10dp"/>
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/matter_list_menu_title"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:orientation="vertical" >

        <!-- 备份 -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_backup_title"
                android:textColor="@color/title_bar"
                android:textSize="18sp" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/title_bar" />

        <LinearLayout
            android:id="@+id/backup_sdcard"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/list_selector"
            android:clickable="true"
            android:orientation="vertical"
            android:paddingBottom="15dp"
            android:paddingLeft="20dp"
            android:paddingTop="15dp" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/backup_sdcard" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/list_line" />

        <LinearLayout
            android:id="@+id/backup_googledrive"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/list_selector"
            android:clickable="true"
            android:orientation="vertical"
            android:paddingBottom="15dp"
            android:paddingLeft="20dp"
            android:paddingTop="15dp" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/backup_googledrive" />
        </LinearLayout>
        <!-- 恢复 -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_restore_title"
                android:textColor="@color/title_bar"
                android:textSize="18sp" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/title_bar" />

        <LinearLayout
            android:id="@+id/restore_sdcard"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/list_selector"
            android:clickable="true"
            android:orientation="vertical"
            android:paddingBottom="15dp"
            android:paddingLeft="20dp"
            android:paddingTop="15dp" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/restore_sdcard" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/list_line" />

        <LinearLayout
            android:id="@+id/restore_googledrive"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/list_selector"
            android:clickable="true"
            android:orientation="vertical"
            android:paddingBottom="15dp"
            android:paddingLeft="20dp"
            android:paddingTop="15dp" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/restore_googledrive" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>