<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/title_bar"
        android:orientation="horizontal"
        android:padding="10dp" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:src="@drawable/ico_warn" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/settings_locale"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RadioButton
            android:id="@+id/rb_default"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:drawableRight="@drawable/btn_radio_selector"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:button="@null"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:text="@string/language_default" />
		<View android:layout_width="fill_parent" android:layout_height="1dp" android:background="@color/list_line"/>
        <RadioButton
            android:id="@+id/rb_simplified"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:drawableRight="@drawable/btn_radio_selector"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:button="@null"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:text="@string/language_simplified" />
        <View android:layout_width="fill_parent" android:layout_height="1dp" android:background="@color/list_line"/>
        <RadioButton
            android:id="@+id/rb_traditional"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:drawableRight="@drawable/btn_radio_selector"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:button="@null"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:text="@string/language_traditional" />
        <View android:layout_width="fill_parent" android:layout_height="1dp" android:background="@color/list_line"/>
        <RadioButton
            android:id="@+id/rb_english"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:drawableRight="@drawable/btn_radio_selector"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:button="@null"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:text="@string/language_english" />
        <View android:layout_width="fill_parent" android:layout_height="1dp" android:background="@color/list_line"/>
    </RadioGroup>
	<Button 
	    android:id="@+id/btn_cancel"
	    android:layout_width="fill_parent"
	    android:layout_height="50dp"
	    android:text="@string/cancel"
	    android:background="@drawable/btn_bg_selector"/>
</LinearLayout>