<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="320dp"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/maxLinearLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/title_bar"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:src="@drawable/ico_warn" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/worldtime_list_action_title"
            android:textColor="@color/white"
            android:textSize="19sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/white"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/worldtime_top_btn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/worldtime_top"
                android:textColor="@color/no_matter"
                android:textSize="19sp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/list_line" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/worldtime_modfiy_btn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/worldtime_modfiy"
                android:textColor="@color/no_matter"
                android:textSize="19sp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/list_line" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/worldtime_delete_btn"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_margin="10dp"
                android:text="@string/worldtime_delete"
                android:textColor="@color/no_matter"
                android:textSize="19sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>