<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/count_date_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp" >

        <Button
            android:id="@+id/count_date_start_btn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/spinner_background_holo_light"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:layout_toLeftOf="@id/count_date_start_btn"
            android:text="@string/count_down_tips_1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@id/count_date_start_btn"
            android:text="@string/count_down_tips_2" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/count_date_end"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/count_date_start"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp" >

        <Button
            android:id="@+id/count_date_end_btn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/spinner_background_holo_light"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:layout_toLeftOf="@id/count_date_end_btn"
            android:text="@string/count_down_tips_3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@id/count_date_end_btn"
            android:text="@string/count_down_tips_4" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/count_date_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/count_date_end"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp" >

        <TextView
            android:id="@+id/count_date_result_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:drawablePadding="5dp"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>

</RelativeLayout>